--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Kamlekarakash24.github.io/edyodastories",
   "name": "codespaces-react",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,8 @@
     "postcss": "^8.4.31"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d buid",
     "start": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
     "build": "vite build",
     "preview": "vite preview",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.1",
+    "gh-pages": "^6.1.0",
     "jsdom": "^22.1.0",
     "vite": "^4.5.1",
     "vitest": "^0.34.6"
